force-app/src/objects/TR1__Qualification_Package__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Add_Associated_Qualifications__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Add Associated Qualifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Qualification Packages</relationshipLabel>
        <relationshipName>Qualification_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Qualification Packages</relationshipLabel>
        <relationshipName>Qualification_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Qualification Package</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QP{YY}{MM}-{0000}</displayFormat>
        <label>Qualification Package</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualification Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>